# SynapseERP

./: .dockerignore  .env.docker.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  docker-compose.yml  manage.py  pyproject.toml  release-please-config.json  requirements-py312.txt  requirements.txt  run.sh  squash-merge-guide.md  synapse
backend/: pyproject.toml  requirements.txt  run.sh
backend/deploy/: nginx.conf.template  synapse.service.template  synapse.socket.template
backend/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po  manual.mo
backend/src/synapse/: __init__.py
backend/src/synapse_api/: __init__.py  apps.py  urls.py  views.py
backend/src/synapse_attendance/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py
backend/src/synapse_attendance/engine/: analyzer.py
backend/src/synapse_attendance/engine/rules/: default_rules.toml
backend/src/synapse_attendance/migrations/: 0001_initial.py  __init__.py
backend/src/synapse_attendance/templates/synapse_attendance/: result.html  upload.html
backend/src/synapse_auth/: __init__.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/src/synapse_auth/migrations/: 0001_initial.py
backend/src/synapse_bom_analyzer/: admin.py  api_urls.py  api_views.py  apps.py  models.py  tests.py  urls.py
backend/src/synapse_bom_analyzer/engine/: main.py  parser.py
backend/src/synapse_bom_analyzer/templates/synapse_bom_analyzer/: upload.html
backend/src/synapse_dashboard/: admin.py  apps.py  urls.py  views.py
backend/src/synapse_dashboard/migrations/: 0001_initial.py
backend/src/synapse_pm/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py
backend/src/synapse_pm/adapters/: __init__.py  base.py  db_adapter.py  vault_adapter.py
backend/src/synapse_pm/api/: urls.py  views.py
backend/src/synapse_pm/management/commands/: sync_vault.py  vault_watch.py
backend/src/synapse_pm/migrations/: 0001_initial.py  0002_add_syncmeta.py  0003_project_add_tags.py
backend/src/synapse_pm/vault/: __init__.py  reader.py  sync_service.py  vault_watcher.py  writer.py
backend/synapse_project/: api_urls.py  settings.py  urls.py
backend/templates/admin/: base_site.html  login.html
deploy/: synapse.service.template
docker/: Dockerfile  Dockerfile.nginx  entrypoint.sh
docker/nginx/: nginx.conf
docs/: README.zh.md
docs/architecture/: 00_INDEX.md  00_索引.md  01_现状分析与战略评估.md  02_Obsidian融合方案设计.md  03_前端技术路线决策.md  04_多层级实施计划.md  09_最终实施计划.md  11_Obsidian解析规则精确定义.md  NEED_TO_DO.md  ai_agent_guide.md  highlights.md
docs/architecture/1-for-ai/: ai_docs_system_template.md  codebase_map.md  guide.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  style.css  vite-env.d.ts
locale/: po_header.txt
scripts/: compile_messages.py
src/synapse_attendance/: __init__.py  models.py  urls.py  views.py
src/synapse_bom_analyzer/: apps.py  views.py
src/synapse_dashboard/: apps.py  middleware.py  models.py  urls.py  views.py
synapse_project/: settings.py  wsgi.py
tools/: pretranslate_po.py
(+58 files in other folders)
